[gd_scene load_steps=2 format=3 uid="uid://dvu1o1sobdo3q"]

[ext_resource type="Script" uid="uid://egdwp5pke76g" path="res://ui/game/crafting_ui.gd" id="1_uylle"]

[node name="CraftingUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_uylle")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 576.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.023529412, 0.03529412, 0.12156863, 1)

[node name="Label2" type="Label" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.91866666, 0.39, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "CRAFTING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftInput" type="TextureRect" parent="MarginContainer/ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 160)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = 88.0
offset_right = -16.0
offset_bottom = 248.0
grow_horizontal = 2

[node name="RightInput" type="TextureRect" parent="MarginContainer/ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 160)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 16.0
offset_top = 88.0
offset_right = 176.0
offset_bottom = 248.0
grow_horizontal = 2

[node name="Output" type="TextureRect" parent="MarginContainer/ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 160)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -256.0
offset_right = 80.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 0

[node name="BtnCraft" type="Button" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -121.25
offset_top = -69.0
offset_right = 121.25
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.91764706, 0.3882353, 1)
theme_override_font_sizes/font_size = 32
text = "CRAFT"

[connection signal="pressed" from="MarginContainer/ColorRect/BtnCraft" to="." method="_on_btn_craft_pressed"]
